Made webpage aesthetically appealing. Still has a problem with image when webpage is stretched horizontally. Will fix

--- a/css/main.css
+++ b/css/main.css
@@ -5,3 +5,50 @@ body {
     font-size: 18px;
     font-weight: 300;
 }
+
+header, section, footer {
+	padding: 1em;
+}
+
+header {
+	background-image: url(../img/background.jpg);
+	background-size: cover;
+	color: #FFFFFF;
+}
+
+header a:link,
+header a:visited {
+	color: #EED234;
+	text-decoration: none;
+	padding-left: 1em;
+	padding-right: 1em;
+	padding-top: 0.5em;
+	padding-bottom: 0.5em;
+}
+
+header a:hover,
+header a:focus {
+	background-color: #EE0000;
+}
+
+#about {
+	background-color: #F3A91C;
+}
+
+#education {
+	background-color: #F0F2BE ;
+}
+
+#projects {
+	background-color: #F35F26;
+}
+
+#contact {
+	background-color: #A85D1C;
+}
+
+#about img {
+	max-height: 400px;
+	float: left;
+	margin-right: 1em;
+}
